Fixed align center on icons

--- a/assets/rs-font-awesome-5.css
+++ b/assets/rs-font-awesome-5.css
@@ -5,6 +5,8 @@
 
 .rs-fa.aligncenter {
 	display: block;
+	margin-inline-start: auto;
+	margin-inline-end: auto;
 }
 
 @supports ( width: fit-content ) {
